fix: add missing text-align for description section on screen 992px

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -693,6 +693,10 @@
       font-size: 24px;
     }
 
+    &__description {
+      text-align: center;
+    }
+
     &__bg-six {
       transform: rotate(160deg);
       top: -255px;
